<resources>
    <string name="app_name">plantnetapp</string>
    <string name="loginText">Nom d\'utilisateur</string>
    <string name="loginBtnText">Se connecter</string>
    <string name="registerBtnText">Inscritption</string>
    <string name="pswrdETHint">Mot de passe</string>
    <string name="usernameETHint">Nom d\'utilisateur</string>
    <string name="btnPhotoTxt">Prendre une photo</string>
    <string name="Infos">Infos</string>
    <string name="btnCollectionsText">Collections</string>
    <string name="bgrd">bgrd</string>
    <string name="settings">Settings</string>
    <string name="languages">Langues</string>
    <string name="deleteAccount">Suppression de compte</string>
    <string name="deleteuserErrorMsg">Impossible de supprimer l\'utilisateur</string>
    <string name="registerText">Inscription</string>
    <string name="submitText">Valider</string>
    <string name="backText">Retour</string>
    <string name="registerSucess">Inscription réussie !</string>
    <string name="loadingStartPhoto">Récupération de la photo en cours...</string>
    <string name="loadingAnalysePhoto">Analyse et sauvegarde de la photo...</string>
    <string name="loadingChangeActivityPhoto">Affichage des informations...</string>
    <string name="addToCollectionText">Voulez vous rajouter la plante à une collection ?</string>
    <string name="create_new_collection">+ Ajouter une collection</string>
    <string name="collection_name">Nom de la collection</string>
    <string name="ETHintCollectioName">Nom de la collection</string>
    <string name="cancel">Annuler</string>
    <string name="noCollectionName">Veuillez donner un nom à la collection</string>
    <string name="addCollectionSuccess">Création d\'une collection réussi</string>
    <string name="addCollectionFailed">Echec de l\'ajout de la collection</string>
    <string name="loadingCreateCollection">Create collection</string>
    <string name="goBack">Retour</string>
    <string name="tvPlantName">Nom de la plante</string>
    <string name="more_info">En savoir plus</string>
    <string name="delete">Supprimer</string>
    <string name="menu">Menu</string>
    <string name="collectionsText">Mes collections</string>
    <string name="full_historique">Historique complet</string>
    <string name="search_view_historique">Rechercher une plante…</string>
    <string name="valueText">- Valeur :</string>
    <string name="reliabitityText">- Fiabilité :</string>
    <string name="culturalCondition">- Condition :</string>
    <string name="waitingConnServer">Connecting to server...</string>
    <string name="userAuth">Authenticating user...</string>
    <string name="finalizing">Bientôt fini...</string>
    <string name="deletionImpossible">Impossible de supprimer cet élément</string>
    <string name="confirmDeletion">Confirmer la suppression</string>
    <string name="sureDeletion">Voulez-vous vraiment supprimer cette plante ?</string>
    <string name="deletionError">Erreur lors de la suppression</string>
    <string name="no">Non</string>
    <string name="searchPlant">Rechercher une plante...</string>
    <string name="english">Anglais</string>
    <string name="french">Français</string>
    <string name="language_title">Langues</string>
    <string name="confirm">Confirmer</string>
    <string name="takePhoto">Prendre</string>
    <string name="nitrogen_provision">Apport en nitrogène</string>
    <string name="storage_gain_water">Capture et apport en eau</string>
    <string name="soil_structuration">Aide à la structure du sol\n</string>
</resources>