<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_marginBottom="16dp"
    android:background="@color/light_gray_trans">

    <!-- Titre 2 -->
    <TextView
        android:id="@+id/tvService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#728579"
        android:layout_marginBottom="8dp"/>

    <!-- Détails indentés -->
    <TextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#728579"
        android:paddingStart="16dp"
        android:text="@string/valueText"/>

    <TextView
        android:id="@+id/tvReliability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#728579"
        android:paddingStart="16dp"
        android:text="@string/reliabitityText"/>

    <TextView
        android:id="@+id/tvCultural"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#728579"
        android:paddingStart="16dp"
        android:text="@string/culturalCondition" />
</LinearLayout>
