<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/textCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/ETHintCollectioName"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/addCollection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancelAddCollection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
