<!-- activity_register.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Image de fond -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_register" />

    <!-- ScrollView pour assurer la navigation verticale -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp"
            android:background="#90A898"
            android:elevation="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerText"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="30dp"/>

            <!-- Champs comme précédemment -->
            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Login"
                android:background="#FFFFFF"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Prénom"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nom"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/etMdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mot de passe"
                android:inputType="textPassword"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Téléphone"
                android:inputType="phone"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#5A6B60"
                android:text="@string/submitText"
                android:textColor="#FFFFFF" />
            <Button
                android:id="@+id/btnBack"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#5A6B60"
                android:text="@string/backText"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
